🎉 | Revamped achievements + 150 characters - Redesigned achievements - Added 5 new characters - Added 150 characters medal - Fixed styles - Added reactive (dark/light) icons

--- a/tr/index.html
+++ b/tr/index.html
@@ -18,7 +18,7 @@
   <body>
     <section id="one" class="color-tr">
       <h1>Armus <img class="svgicon" src="../icon.svg"></h1>
-      <h2 style="margin-bottom: 10px;">🎊 100 ÜYE 🎊</h2>
+      <h2 style="margin-bottom: 10px;">🎊 150 ÜYE 🎊</h2>
       <!-- <h2>Türkçe</h2> -->
       <a style="padding-top: 20px;" href="#two">
         <span class="material-icons-round scroll">keyboard_arrow_down</span>
@@ -40,7 +40,7 @@
               <td><a href="#informations">📝 Bilgiler</a></td>
             </tr>
             <tr>
-              <td><a href="#medals">🏅 Madalyalar</a></td>
+              <td><a href="#achievements">🏅 Başarılar</a></td>
             </tr>
             <tr>
               <td><a href="#army">🔪 Ordu</a></td>
@@ -66,7 +66,7 @@
       <!-- Informations -->
       <div id="informations">
         <h2>📝 Bilgiler</h2>
-        <div align="center"><b>Armus, tüm özel amogi bir orduda organize etmek için arkadaşlarla oluşturulan GitHubde  barındırılan bir projedir.</b></div>
+        <div align="center"><b>Armus, tüm özel amogi bir orduda organize etmek için arkadaşlarla oluşturulan GitHubde barındırılan bir projedir.</b></div>
         <noscript>
           <div align="center" style="margin-top: 15px;"><b>❗ JavaScript bu tarayıcıda devre dışıdır: bazı özellikler çalışmayabilir</b></div>
         </noscript>
@@ -79,21 +79,23 @@
         <div class="spaceline"></div>
       </div>
 
-      <!-- Medals -->
-      <div id="medals">
-        <h2>🏅 Madalyalar</h2>
+      <!-- Achievements -->
+      <div id="achievements">
+        <h2>🏅 Başarılar</h2>
         <p align="center">
           <img src="../other/achievements/creation.png" height=200 title="Projenin oluşturulması">
-          <img src="../other/achievements/25-members.png" height=200 title="Orduda 25 üye!">
+          <img src="../other/achievements/members-25.png" height=200 title="Orduda 25 üye!">
           <img src="../other/achievements/certif.png" height=200 title="Bir uzman tarafından sanat adı verildi!">
-          <img src="../other/achievements/website.png" height=200 title="Sitenin açılması!">
-          <img src="../other/achievements/50-members.png" height=200 title="Orduda 50 üye!">
-          <img src=../other/achievements/10-artists.png height=200 title="10 sanatçılar!">
-          <img src=../other/achievements/75-members.png height=200 title="Orduda 75 üye!">
-          <img src="../other/achievements/100-commits.png" height="200" title="GitHub'da 100 commits!">
-          <img src=../other/achievements/translate.png height=200 title="Web sitenin çevirisi">
-          <img src=../other/achievements/100-members.png height=200 title="Orduda 100 üye! 🎊">
-          <img src=../other/achievements/20-artists.png height=200 title="20 sanatçılar!">
+          <img src="../other/achievements/lang-fr.png" height=200 title="Sitenin açılması!">
+          <img src="../other/achievements/members-50.png" height=200 title="Orduda 50 üye!">
+          <img src=../other/achievements/artists-10.png height=200 title="10 sanatçılar karakter yarattı!">
+          <img src=../other/achievements/members-75.png height=200 title="Orduda 75 üye!">
+          <img src="../other/achievements/commits-100.png" height="200" title="GitHub'da 100 commits!">
+          <img src=../other/achievements/lang-en.png height=200 title="İngilizcede çeviri">
+          <img src=../other/achievements/members-100.png height=200 title="Orduda 100 üye! 🎊">
+          <img src=../other/achievements/lang-tr.png height=200 title="Türkçede çeviri">
+          <img src=../other/achievements/artists-20.png height=200 title="20 sanatçılar karakter yarattı!">
+          <img src=../other/achievements/members-150.png height=200 title="Orduda 150 üye! 🎊">
         </p>
         <div class="spaceline"></div>
       </div>
@@ -101,9 +103,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 Ordu</h2>
-        <p align="center">Toplam üye sayısı: <b class="ref">148</b></p>
+        <p align="center">Toplam üye sayısı: <b class="ref">153</b> / 200</p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 98.7%">148/150</div>
+          <div class="progressbar-inside" style="width: 6%">6%</div>
         </div>
         <p align="center"><b class="ref">Altın</b> olan bir isim tıklayarak sizi sanatçının <code>⭐ Teşekkürlerine</code> yönlendirecektir.</p>
         <table class="members-table" align="center">
@@ -149,6 +151,13 @@
                 <p><img src=../pics/airmogus.jpeg></p>
               </td>
               <td><a href="../pics/airmogus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">alienus</a></td>
+              <td>
+                <p><img src="../pics/alienus.jpeg"></p>
+              </td>
+              <td><a href="../pics/alienus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>alongus</td>
@@ -319,6 +328,13 @@
               <td><a href="../pics/catus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>chadus</td>
+              <td>
+                <p><img src="../pics/chadus.jpeg"></p>
+              </td>
+              <td><a href="../pics/chadus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Jujudubat7">chaplinus</a></td>
               <td>
                 <p><img src=../pics/chaplinus.jpeg></p>
@@ -394,6 +410,13 @@
                 <p><img src="../pics/diamonda.jpeg"></p>
               </td>
               <td><a href="../pics/diamonda.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">distractionus</a></td>
+              <td>
+                <p><img src="../pics/distractionus.jpeg"></p>
+              </td>
+              <td><a href="../pics/distractionus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">dora</a></td>
@@ -585,6 +608,13 @@
               <td><a href="../pics/infirmus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>insultus</td>
+              <td>
+                <p><img src="../pics/insultus.jpeg"></p>
+              </td>
+              <td><a href="../pics/insultus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">intellus</a></td>
               <td>
                 <p><img src=../pics/intellus.jpeg></p>
@@ -710,6 +740,13 @@
                 <p><img src="../pics/monstrus.jpeg"></p>
               </td>
               <td><a href="../pics/monstrus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">mukbangus</a></td>
+              <td>
+                <p><img src="../pics/mukbangus.jpeg"></p>
+              </td>
+              <td><a href="../pics/mukbangus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">musclus</a></td>
@@ -1204,7 +1241,7 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/apix0n" target="_blank" title="GitHub'da @Apix0n'e göz atın">Apix</a></b> (ben), beyaz bir ad olan tüm karakterler için,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> fikre sahip olduğum kiși olmanın yanı sıra ve <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> ve <code>vampirus</code> yarattıǧını için,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code> için,</li>
+          <li id="AN-XNinja"><b class="ref2">💎 <a href="https://github.com/XNinjaYmZ" target="_blank" title="GitHub'da @XNinjaYmZ'ye göz atın">XNinja</a></b> <code>abeillus</code>, <code>alienus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>distractionus</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>mukbangus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> ve <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code> için,</li>
           <li id="AN-Ilian"><b>Ilian</b> <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> ve <code>vegetus</code> için,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> <code>chaplinus</code> için,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> <code>luffus</code> ve <code>nymarus</code> için,</li>
@@ -1261,7 +1298,17 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/apix0n" target="_blank"><img src="../apix-logo.svg" class="svgicon"> Apix tarafından ❤️ ile oluşturuldu | 2022-2023</a></li>
+          <li>
+            <a href="https://github.com/apix0n" target="_blank">
+              <picture class="svgicon">
+                <source srcset="../apix-dark.svg" media="(prefers-color-scheme: light)">
+                <source srcset="../apix.svg">
+                <!-- Fallback -->
+                <img class="svgicon" src="../apix-dark.svg" alt="Armus icon">
+              </picture>
+              Apix tarafından ❤️ ile oluşturuldu | 2022-2023
+            </a>
+          </li>
         </ul>
       </div>
     </section>
