--- a/en/index.html
+++ b/en/index.html
@@ -18,7 +18,7 @@
   <body>
     <section id="one" class="color-en">
       <h1>Armus <img class="svgicon" src="../icon.svg"></h1>
-      <h2 style="margin-bottom: 10px;">🎊 100 MEMBERS 🎊</h2>
+      <h2 style="margin-bottom: 10px;">🎊 150 MEMBERS 🎊</h2>
       <!-- <h2>English</h2> -->
       <a style="padding-top: 20px;" href="#two">
         <span class="material-icons-round scroll">keyboard_arrow_down</span>
@@ -40,7 +40,7 @@
               <td><a href="#informations">📝 Informations</a></td>
             </tr>
             <tr>
-              <td><a href="#medals">🏅 Medals</a></td>
+              <td><a href="#achievements">🏅 Achievements</a></td>
             </tr>
             <tr>
               <td><a href="#army">🔪 The army</a></td>
@@ -79,21 +79,23 @@
         <div class="spaceline"></div>
       </div>
 
-      <!-- Medals -->
-      <div id="medals">
-        <h2>🏅 Medals</h2>
+      <!-- Achievements -->
+      <div id="achievements">
+        <h2>🏅 Achievements</h2>
         <p align="center">
           <img src="../other/achievements/creation.png" height=200 title="Creation of the project">
-          <img src="../other/achievements/25-members.png" height=200 title="25 members in the army!">
+          <img src="../other/achievements/members-25.png" height=200 title="25 members in the army!">
           <img src="../other/achievements/certif.png" height=200 title="Project qualified as art by an expert!">
-          <img src="../other/achievements/website.png" height=200 title="Opening of the website!">
-          <img src="../other/achievements/50-members.png" height=200 title="50 members in the army!">
-          <img src=../other/achievements/10-artists.png height=200 title="10 artists!">
-          <img src=../other/achievements/75-members.png height=200 title="75 members in the army!">
-          <img src="../other/achievements/100-commits.png" height="200" title="100 commits on GitHub!">
-          <img src=../other/achievements/translate.png height=200 title="Website's translation">
-          <img src=../other/achievements/100-members.png height=200 title="100 members in the army! 🎊">
-          <img src=../other/achievements/20-artists.png height=200 title="20 artists!">
+          <img src="../other/achievements/lang-fr.png" height=200 title="Opening of the website!">
+          <img src="../other/achievements/members-50.png" height=200 title="50 members in the army!">
+          <img src=../other/achievements/artists-10.png height=200 title="10 artists created characters!">
+          <img src=../other/achievements/members-75.png height=200 title="75 members in the army!">
+          <img src="../other/achievements/commits-100.png" height="200" title="100 commits on GitHub!">
+          <img src=../other/achievements/lang-en.png height=200 title="Translation in English">
+          <img src=../other/achievements/members-100.png height=200 title="100 members in the army! 🎊">
+          <img src=../other/achievements/lang-tr.png height=200 title="Translation in Turkish">
+          <img src=../other/achievements/artists-20.png height=200 title="20 artists created characters!">
+          <img src=../other/achievements/members-150.png height=200 title="150 members dans l'armée! 🎊">
         </p>
         <div class="spaceline"></div>
       </div>
@@ -101,9 +103,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">148</b></p>
+        <p align="center">Total number of members: <b class="ref">153</b> / 200</p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 98.7%">148/150</div>
+          <div class="progressbar-inside" style="width: 6%">6%</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align="center">
@@ -149,6 +151,13 @@
                 <p><img src=../pics/airmogus.jpeg></p>
               </td>
               <td><a href="../pics/airmogus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">alienus</a></td>
+              <td>
+                <p><img src="../pics/alienus.jpeg"></p>
+              </td>
+              <td><a href="../pics/alienus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>alongus</td>
@@ -319,6 +328,13 @@
               <td><a href="../pics/catus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>chadus</td>
+              <td>
+                <p><img src="../pics/chadus.jpeg"></p>
+              </td>
+              <td><a href="../pics/chadus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Jujudubat7">chaplinus</a></td>
               <td>
                 <p><img src=../pics/chaplinus.jpeg></p>
@@ -394,6 +410,13 @@
                 <p><img src="../pics/diamonda.jpeg"></p>
               </td>
               <td><a href="../pics/diamonda.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">distractionus</a></td>
+              <td>
+                <p><img src="../pics/distractionus.jpeg"></p>
+              </td>
+              <td><a href="../pics/distractionus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">dora</a></td>
@@ -585,6 +608,13 @@
               <td><a href="../pics/infirmus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td>insultus</td>
+              <td>
+                <p><img src="../pics/insultus.jpeg"></p>
+              </td>
+              <td><a href="../pics/insultus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">intellus</a></td>
               <td>
                 <p><img src=../pics/intellus.jpeg></p>
@@ -710,6 +740,13 @@
                 <p><img src="../pics/monstrus.jpeg"></p>
               </td>
               <td><a href="../pics/monstrus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">mukbangus</a></td>
+              <td>
+                <p><img src="../pics/mukbangus.jpeg"></p>
+              </td>
+              <td><a href="../pics/mukbangus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Chus">musclus</a></td>
@@ -1204,7 +1241,7 @@
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/apix0n" target="_blank" title="Check out @apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref">👑 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref2">💎 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>alienus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>distractionus</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>mukbangus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href=https://github.com/apix0n/Armus/issues/7 target="_blank" class="idea-gh-label">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
@@ -1261,7 +1298,17 @@
     <section id="three">
       <div class="navbar">
         <ul>
-          <li><a href="https://github.com/apix0n" target="_blank"><img src="../apix-logo.svg" class="svgicon"><img src="../apix-logo.svg" class="svgicon"> Created by Apix with ❤️ | 2022-2023</a></li>
+          <li>
+            <a href="https://github.com/apix0n" target="_blank">
+              <picture class="svgicon">
+                <source srcset="../apix-dark.svg" media="(prefers-color-scheme: light)">
+                <source srcset="../apix.svg">
+                <!-- Fallback -->
+                <img class="svgicon" src="../apix-dark.svg" alt="Armus icon">
+              </picture>
+              Created by Apix with ❤️ | 2022-2023
+            </a>
+          </li>
         </ul>
       </div>
     </section>
