--- a/en/index.html
+++ b/en/index.html
@@ -103,9 +103,9 @@
       <!-- The army -->
       <div id="army">
         <h2>🔪 The army</h2>
-        <p align="center">Total number of members: <b class="ref">153</b> / 200</p>
+        <p align="center">Total number of members: <b class="ref">165</b> / 200</p>
         <div class="progressbar">
-          <div class="progressbar-inside" style="width: 6%">6%</div>
+          <div class="progressbar-inside" style="width: 30%">30%</div>
         </div>
         <p align="center">Clicking on a <b class="ref">golden</b> link will send you to the <code>🌟 Acknowledgements</code> of the artist.</p>
         <table class="members-table" align="center">
@@ -272,6 +272,13 @@
               <td><a href="../pics/bakacutea.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Kooki">balaius</a></td>
+              <td>
+                <p><img src="../pics/balaius.jpeg"></p>
+              </td>
+              <td><a href="../pics/balaius.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Chus">bananus</a></td>
               <td>
                 <p><img src="../pics/bananus.jpeg"></p>
@@ -319,6 +326,13 @@
                 <p><img src="../pics/capturus.jpeg"></p>
               </td>
               <td><a href="../pics/capturus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">carnagus</a></td>
+              <td>
+                <p><img src="../pics/carnagus.jpeg"></p>
+              </td>
+              <td><a href="../pics/carnagus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>catus</td>
@@ -545,6 +559,13 @@
               <td><a href="../pics/gokus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Kooki">googlus</a></td>
+              <td>
+                <p><img src="../pics/googlus.jpeg"></p>
+              </td>
+              <td><a href="../pics/googlus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Jiwon">gourdus</a></td>
               <td>
                 <p><img src="../pics/gourdus.jpeg"></p>
@@ -650,6 +671,13 @@
               <td><a href="../pics/killus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Kooki">kingus</a></td>
+              <td>
+                <p><img src="../pics/kingus.jpeg"></p>
+              </td>
+              <td><a href="../pics/kingus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td>labus</td>
               <td>
                 <p><img src="../pics/labus.jpeg"></p>
@@ -669,6 +697,13 @@
                 <p><img src="../pics/livrus.jpeg"></p>
               </td>
               <td><a href="../pics/livrus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-XNinja">locomotivus</a></td>
+              <td>
+                <p><img src="../pics/locomotivus.jpeg"></p>
+              </td>
+              <td><a href="../pics/locomotivus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-ceriban176">louivitus</a></td>
@@ -726,6 +761,13 @@
                 </p>
               </td>
               <td><a href="../pics/michael-jacksus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Kooki">mickus</a></td>
+              <td>
+                <p><img src="../pics/mickus.jpeg"></p>
+              </td>
+              <td><a href="../pics/mickus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>minecraftus</td>
@@ -796,6 +838,13 @@
                 <p><img src="../pics/nymarus.jpeg"></p>
               </td>
               <td><a href="../pics/nymarus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-EL-MALADO">omagad</a></td>
+              <td>
+                <p><img src="../pics/omagad.jpeg"></p>
+              </td>
+              <td><a href="../pics/omagad.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>oranjus</td>
@@ -1043,11 +1092,25 @@
               <td><a href="../pics/tacus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Kooki">talescramptus</a></td>
+              <td>
+                <p><img src="../pics/talescramptus.jpeg"></p>
+              </td>
+              <td><a href="../pics/talescramptus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Aliko">tchoupius</a></td>
               <td>
                 <p><img src="../pics/tchoupius.jpeg"></p>
               </td>
               <td><a href="../pics/tchoupius.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td>termius</td>
+              <td>
+                <p><img src="../pics/termius.jpeg"></p>
+              </td>
+              <td><a href="../pics/termius.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Kooki">tetrus</a></td>
@@ -1083,6 +1146,13 @@
                 <p><img src="../pics/toastus.jpeg"></p>
               </td>
               <td><a href="../pics/toastus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Kooki">toilettus</a></td>
+              <td>
+                <p><img src="../pics/toilettus.jpeg"></p>
+              </td>
+              <td><a href="../pics/toilettus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td><a class="ref" href="#AN-Aliko">tornadus</a></td>
@@ -1127,6 +1197,13 @@
               <td><a href="../pics/vegetus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
+              <td><a class="ref" href="#AN-Kooki">venomus</a></td>
+              <td>
+                <p><img src="../pics/venomus.jpeg"></p>
+              </td>
+              <td><a href="../pics/venomus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
               <td><a class="ref" href="#AN-Benjaminouille">villajus</a></td>
               <td>
                 <p><img src="../pics/villajus.jpeg"></p>
@@ -1146,6 +1223,13 @@
                 <p><img src="../pics/voitus.jpeg"></p>
               </td>
               <td><a href="../pics/voitus.jpeg"><span class="material-icons-round">link</span></a></td>
+            </tr>
+            <tr>
+              <td><a class="ref" href="#AN-Kooki">volus</a></td>
+              <td>
+                <p><img src="../pics/volus.jpeg"></p>
+              </td>
+              <td><a href="../pics/volus.jpeg"><span class="material-icons-round">link</span></a></td>
             </tr>
             <tr>
               <td>waterus</td>
@@ -1236,12 +1320,12 @@
       <!-- Acknowledgements -->
       <div id="acknowledgements">
         <h2>🌟 Acknowledgements</h2>
-        <p>Thanks to the <b class="ref">23</b> artists:</p>
+        <p>Thanks to the <b class="ref">24</b> artists:</p>
         <!--* AN = Artist name -->
         <ul class="remerciements">
           <li id="AN-Apix"><b class="ref3">🌹 <a href="https://github.com/apix0n" target="_blank" title="Check out @apix0n on GitHub">Apix</a></b> (me) for all the characters with the white name,</li>
           <li id="AN-Chus"><b class="ref2">💎 Chus</b> who, in addition to being the person I had the idea with, created <code>amoga</code>, <code>amogus-poli</code>, <code>bananus</code>, <code>blackus</code>, <code>chinus</code>, <code>cuistus</code>, <code>educatus</code>, <code>galaxus</code>, <code>generalus</code>, <code>gokus</code>, <code>impostor</code>, <code>infirmus</code>, <code>laserus</code>, <code>livrus</code>, <code>michael-jacksus</code>, <code>musclus</code>, <code>naturus</code>, <code>ninjsus</code>, <code>perdus</code>, <code>piratus</code>, <code>poulus</code>, <code>seinsus</code>, <code>the-creatorus</code>, <code>thugus</code> and <code>vampirus</code>,</li>
-          <li id="AN-XNinja"><b class="ref2">💎 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>alienus</code>, <code>applus</code>, <code>asus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>distractionus</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>marius</code>, <code>monstrus</code>, <code>mukbangus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href="https://github.com/apix0n/Armus/issues/7" target="_blank" class="idea-gh-label">#7</a></code>,</li>
+          <li id="AN-XNinja"><b class="ref2">💎 <a href="https://github.com/XNinjaYmZ" target="_blank" title="Check out @XNinjaYmZ on GitHub">XNinja</a></b> for <code>abeillus</code>, <code>alienus</code>, <code>applus</code>, <code>asus</code>, <code>carnagus</code>, <code>contrairus</code>, <code>diamonda</code>, <code>distractionus</code>, <code>fifus</code>, <code>gameus</code>, <code>kebabus</code>, <code>locomotivus</code>, <code>marius</code>, <code>monstrus</code>, <code>mukbangus</code>, <code>pacmanus</code>, <code>pokebollus</code>, <code onclick="rick()" class="ricklink">rickus</code>, <code>stevus</code>, <code>stickmus</code>, <code>trollus</code>, <code>uranus</code> and <code>wizardus <a href="https://github.com/apix0n/Armus/issues/7" target="_blank" class="idea-gh-label">#7</a></code>,</li>
           <li id="AN-Ilian"><b>Ilian</b> for <code>drogueus</code>, <code>killus</code>, <code>mysterus</code>, <code>narutus</code>, <code>robotus</code>, <code>sofianus</code>, <code>spidermanus</code> and <code>vegetus</code>,</li>
           <li id="AN-Jujudubat7"><b>Jujudubat7</b> for <code>chaplinus</code>,</li>
           <li id="AN-EVIL-UO"><b>EVIL UO</b> for <code>luffus</code> and <code>nymarus</code>,</li>
@@ -1258,10 +1342,11 @@
           <li id="AN-Goku"><b>Goku</b> for <code>maya</code> and <code>zorus</code>,</li>
           <li id="AN-Abat"><b>Abat</b> for <code>paintus</code>,</li>
           <li id="AN-Ducky-duck"><b>Ducky duck</b> for <code>ahmonzbobus</code>,</li>
-          <li id="AN-Kookanonym"><b>Kookanonym</b> for <code>crashus</code> and <code>questionus</code>,</li>
+          <li id="AN-Kooki"><b class="ref">👑 Kooki</b> for <code>balaius</code>, <code>crashus</code>, <code>googlus</code>, <code>kingus</code>, <code>mickus</code>, <code>questionus</code> <code>talescramptus</code>, <code>tetrus</code> <code>toilettus</code>, <code>venomus</code> and <code>volus</code>,</li>
           <li id="AN-Benjaminouille"><b>Benjaminouille</b> for <code>enormongus</code> and <code>villajus</code>,</li>
           <li id="AN-Jiwon"><b>Jiwon</b> for <code>gourdus</code>,</li>
           <li id="AN-GaimeLeZuitres"><b>GaimeLéZuitres</b> for <code>tacus</code>,</li>
+          <li id="AN-EL-MALADO"><b>EL MALADO</b> for <code>omagad</code>,</li>
         </ul>
         <p>Caption:</p>
         <ul>
