✏️ | Edited description of the project + Added "original creators of Armus" in Thanks

--- a/en/index.html
+++ b/en/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#0f00e0">
     <meta property="og:image" content="social.png">
-    <meta name="description" content="A project to organize all the custom amogi into an army!">
+    <meta name="description" content="A project that I created with a friend in the hope to make an army of amogi.">
     <script src="../main.js" async></script>
     <link rel="manifest" href="manifest.json">
   </head>
@@ -66,7 +66,7 @@
       <!-- Informations -->
       <div id="informations">
         <h2>📝 Informations</h2>
-        <div align="center"><b>Armus is a project hosted on GitHub created with friends to organize all the custom amogi into an army.</b></div>
+        <div align="center"><b>Armus is a project that I created with a friend in the hope to make an army of amogi.</b></div>
         <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-en gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
@@ -162,6 +162,7 @@
       <!-- Thanks -->
       <div id="thanks">
         <h2>🌟 Thanks</h2>
+        <p>Original creators of Armus: <b>Apix</b> and <b>Chus</b></p>
         <p>Thanks to the <b class="accentedtext" id="numberofartists">20</b> artists who created characters:</p>
         <ul class="remerciements">
           <!-- <li><b>Apix</b>: <b>1</b> (<code>amogus</code>)</li> -->
