--- a/fr/index.html
+++ b/fr/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#ff0000">
     <meta property="og:image" content="social.png">
-    <meta name="description" content="Un projet pour organiser tous les amogi personnalisés afin d'en faire une armée!">
+    <meta name="description" content="Un projet que j'ai créé avec un ami dans l'espoir de faire une armée d'amogi">
     <script src="../main.js" async></script>
     <link rel="manifest" href="manifest.json">
   </head>
@@ -66,7 +66,7 @@
       <!-- Informations -->
       <div id="informations">
         <h2>📝 Informations</h2>
-        <div align="center"><b>Armus est un projet hébergé sur GitHub créé avec des amis pour organiser tous les amogi personnalisés afin d'en faire une armée.</b></div>
+        <div align="center"><b>Armus est un projet que j'ai créé avec un ami dans l'espoir de faire une armée d'amogi.</b></div>    
         <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-fr gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
@@ -162,6 +162,7 @@
       <!-- Thanks -->
       <div id="thanks">
         <h2>🌟 Remerciements</h2>
+        <p>Créateurs originaux d'Armus: <b>Apix</b> et <b>Chus</b></p>
         <p>Merci aux <b class="accentedtext" id="numberofartists">20</b> artistes qui ont créé des personnages.</p>
         <ul class="remerciements">
           <!-- <li><b>Apix</b>: <b>1</b> (<code>amogus</code>)</li> -->
