--- a/tr/index.html
+++ b/tr/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="mask-icon" href="../icon.svg" color="#f52626">
     <meta property="og:image" content="social.png">
-    <meta name="description" content="Tüm özel amogi bir orduya organize etmek için bir proje!">
+    <meta name="description" content="Bir arkadaşımla birlikte bir amogi ordusu oluşturmak için yarattığımız bir proje.">
     <script src="../main.js" async></script>
     <link rel="manifest" href="manifest.json">
   </head>
@@ -66,7 +66,7 @@
       <!-- Informations -->
       <div id="informations">
         <h2>📝 Bilgiler</h2>
-        <div align="center"><b>Armus, tüm özel amogi bir orduda organize etmek için arkadaşlarla oluşturulan GitHubde barındırılan bir projedir.</b></div>
+        <div align="center"><b>Armus, bir arkadaşımla birlikte bir amogi ordusu oluşturmak için yarattığımız bir projedir.</b></div>
         <a class="nounderline" href="https://github.com/apix0n/Armus">
           <div class="styled-btn color-tr gh-button">
             <img src="../github-icon.svg" alt="GitHub icon">
@@ -162,6 +162,7 @@
       <!-- Thanks -->
       <div id="thanks">
         <h2>🌟 Teșekkürler</h2>
+        <p>Armus'un orijinal yaratıcıları: <b>Apix</b> ve <b>Chus</b></p>
         <p>Karakterleri yapan <b class="accentedtext" id="numberofartists">20</b> sanatçılara teşekkürler.</p>
         <ul class="remerciements">
           <!-- <li><b>Apix</b>: <b>1</b> (<code>amogus</code>)</li> -->
