🌍 | Moved fonts from Google CDN to local * Allows for a full-offline use and development

--- a/en/index.html
+++ b/en/index.html
@@ -195,6 +195,7 @@
           <li>Icons: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Brand icons: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojis: <a href="https://fonts.google.com/noto/specimen/Noto+Color+Emoji">Noto Color Emoji</a></li>
+          <li>Offline fonts: <a href="https://gwfh.mranftl.com/">google-webfonts-helper</a></li>
           <li>Hosting: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
