--- a/tr/index.html
+++ b/tr/index.html
@@ -195,6 +195,7 @@
           <li>Simgeler: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Marka simgeleri: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojiler: <a href="https://fonts.google.com/noto/specimen/Noto+Color+Emoji">Noto Color Emoji</a></li>
+          <li>Çevrimdışı yazı tipleri: <a href="https://gwfh.mranftl.com/">google-webfonts-helper</a></li>
           <li>Barındırlama: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
