--- a/fr/index.html
+++ b/fr/index.html
@@ -195,6 +195,7 @@
           <li>Icônes: <a href="https://fonts.google.com/icons">Material Icons</a></li>
           <li>Icônes de marque: <a href="https://simpleicons.org">Simple Icons</a></li>
           <li>Emojis: <a href="https://fonts.google.com/noto/specimen/Noto+Color+Emoji">Noto Color Emoji</a></li>
+          <li>Polices hors-ligne: <a href="https://gwfh.mranftl.com/">google-webfonts-helper</a></li>
           <li>Hébergement: <a href="https://pages.github.com/">GitHub Pages</a></li>
         </ul>
       </div>
