🥗 | Added buttons to change card layout * Grid (new) and Vertical ("legacy") + Fix emoji on Apple devices

--- a/en/index.html
+++ b/en/index.html
@@ -105,6 +105,11 @@
         <div class="progressbar">
           <div class="progressbar-inside" style="width: 50%">50%</div>
         </div>
+        <p align="center" class="choosecardtype">
+          Layout of the cards:
+          <span class="material-icons-round cardtypeactive" id="cardtypegrid" title="Grid">drag_indicator</span>
+          <span class="material-icons-round" id="cardtypevertical" title="Vertical">more_vert</span>
+        </p>
         <p align="center">Clicking on a card will show the character on the entire screen with other informations.</p>
         <div id="cardscontainer">
 
