--- a/fr/index.html
+++ b/fr/index.html
@@ -105,6 +105,11 @@
         <div class="progressbar">
           <div class="progressbar-inside" style="width: 50%">50%</div>
         </div>
+        <p align="center" class="choosecardtype">
+          Affichage des cartes:
+          <span class="material-icons-round cardtypeactive" id="cardtypegrid" title="Grille">drag_indicator</span>
+          <span class="material-icons-round" id="cardtypevertical" title="Vertical">more_vert</span>
+        </p>
         <p align="center">Cliquer sur une carte affichera le personnage sur l'entièreté de votre écran avec d'autres informations.</p>
         <div id="cardscontainer">
 
