--- a/tr/index.html
+++ b/tr/index.html
@@ -105,6 +105,11 @@
         <div class="progressbar">
           <div class="progressbar-inside" style="width: 50%">50%</div>
         </div>
+        <p align="center" class="choosecardtype">
+          Kartları gösterimi:
+          <span class="material-icons-round cardtypeactive" id="cardtypegrid" title="Izgara">drag_indicator</span>
+          <span class="material-icons-round" id="cardtypevertical" title="Dikey">more_vert</span>
+        </p>
         <p align="center">Bir karta tıkladığınızda, karakteri diğer bilgilerle birlikte tüm ekranınızda görüntüleyecektir.</p>
         <div id="cardscontainer">
           
