✒️ | Fixed some errors * License "made by" link in README * Rank in en/index.html * "Artist" in tr/index.html

--- a/en/index.html
+++ b/en/index.html
@@ -174,7 +174,7 @@
         </ul>
         <p>Caption:</p>
         <ul>
-          <li><b class="rank">👑 Artist</b>: More than 10 characters</li>
+          <li><b class="rank1">👑 Artist</b>: More than 10 characters</li>
           <li><b class="rank2">💎 Artist</b>: More than 20 characters</li>
           <li><b class="rank3">🌹 Artist</b>: More than 30 characters</li>
           <li><b class="rank4">🍀 Artist</b>: More than 40 characters</li>
