--- a/tr/index.html
+++ b/tr/index.html
@@ -177,7 +177,7 @@
           <li><b class="rank1">👑 Sanatçı</b>: 10 karakterden fazla</li>
           <li><b class="rank2">💎 Sanatçı</b>: 20 karakterden fazla</li>
           <li><b class="rank3">🌹 Sanatçı</b>: 30 karakterden fazla</li>
-          <li><b class="rank4">🍀 Artiste</b>: 40 karakterden fazla</li>
+          <li><b class="rank4">🍀 Sanatçı</b>: 40 karakterden fazla</li>
         </ul>
         <ul>
           <li><code>... <a href="#thanks" class="addchar-gh-label">#00</a></code>: Karakter ekleme</li>
